--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,29 @@ RewriteCond %{HTTPS} off [OR]
 RewriteCond %{HTTP_HOST} !^www\.studioomg\.com.br$ [NC]
 RewriteRule ^(.*)$ https://www.studioomg.com.br/$1 [L,R=301]
 # END REDIRECT HTTPS + WWW
+
+#CACHE CONTROL
+ExpiresActive On
+ExpiresDefault A0
+
+#1 mounth
+<FilesMatch "\.(jpg|jpeg|png|gif|swf|mp4)$">
+ExpiresDefault 2629000
+</FilesMatch>
+
+#3 hours
+<FilesMatch "\.(txt|xml|js|css)$">
+ExpiresDefault A10800
+</FilesMatch>
+
+#G-zip Compression
+<ifModule mod_gzip.c>
+mod_gzip_on Yes
+mod_gzip_dechunk Yes
+mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+mod_gzip_item_include handler ^cgi-script$
+mod_gzip_item_include mime ^text/.*
+mod_gzip_item_include mime ^application/x-javascript.*
+mod_gzip_item_exclude mime ^image/.*
+mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</ifModule>
