--- a/.htaccess
+++ b/.htaccess
@@ -11,10 +11,22 @@ ExpiresDefault A0
 
 #1 mounth
 <FilesMatch "\.(jpg|jpeg|png|gif|swf|mp4)$">
-ExpiresDefault 2629000
+ExpiresDefault A2629000
 </FilesMatch>
 
 #3 hours
 <FilesMatch "\.(txt|xml|js|css)$">
 ExpiresDefault A10800
 </FilesMatch>
+
+#G-zip Compression
+<ifModule mod_gzip.c>
+mod_gzip_on Yes
+mod_gzip_dechunk Yes
+mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+mod_gzip_item_include handler ^cgi-script$
+mod_gzip_item_include mime ^text/.*
+mod_gzip_item_include mime ^application/x-javascript.*
+mod_gzip_item_exclude mime ^image/.*
+mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</ifModule>
